# canggu-blockchain

./: .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  config.json
.github/workflows/: canggu.yml
data/: identity.json
data/blockchain.db/: db  snap.00000000000039F5
src/: config.rs  main.rs  node.rs  validator_node.rs
src/accounts/: Cargo.toml  accounts.rs
src/accounts/src/: accounts.rs  lib.rs
src/accounts/src/pubkey/: pubkey.rs
src/blockchain/: block.rs  chain.rs  mod.rs  state.rs  storage.rs
src/cli/: commands.rs
src/consensus/: mod.rs  proof_of_history.rs  slot_leader.rs
src/crypto/: hash.rs  keys.rs
src/examples/: basic_contract.rs  simple_transfers.rs
src/genesis/: Cargo.toml
src/genesis/src/: genesis.rs  lib.rs
src/merkle/: Cargo.toml
src/merkle/src/: merkle_tree.rs
src/network/: gossip.rs  message.rs  mod.rs  peer.rs
src/node/: mod.rs
src/pubkey/: Cargo.toml  pubkey.rs
src/rpc/: server.rs
src/runtime/: instruction.rs  mod.rs  program.rs  vm.rs
src/transaction/: mempool.rs  mod.rs  pool.rs  tx.rs
