[package]
name = "genesis"
version = "0.1.0"
edition = "2021"
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"

[lib]
name = "genesis"
path = "src/lib.rs"
